# main-cpp

./: CMakeLists.txt  Controller.cpp  Controller.h  Controller.hpp  Converter.cpp  Converter.h  FrameManager.h  FrameManager.hpp  GameObject.hpp  Main.cpp  Test.cpp  hello.hpp  main.cpp  readme.md  setup.bat  test.cpp
.github/workflows/: test.yml  test_ubuntu.yml  test_windows.yml
game/: CMakeLists.txt  Game.cpp  Game.h  Game.hpp  GameDataProvider.cpp  GameDataProvider.h  GameObject.h
hello/: CMakeLists.txt  Hello.cpp  Hello.h  Hello.hpp  hello.cpp  hello.hpp
test/: CMakeLists.txt  Test.cpp
ui/: CMakeLists.txt  GeometricObject.hpp  UiObject.h  Window.cpp  Window.h  Window.hpp
